--- a/final/blog.html
+++ b/final/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Bookmarked</title>
     <meta name="description" content="Read reviews and posts from members and staff of the Bookmarked reading group.">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Daniel Toledo">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
