--- a/final/join.html
+++ b/final/join.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join Us! - Bookmarked</title>
     <meta name="description" content="Join the Bookmarked reading group! Fill out our form to become a member.">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Daniel Toledo">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
