--- a/final/form-action.html
+++ b/final/form-action.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Submission Received - Bookmarked</title>
     <meta name="description" content="Thank you for joining the Bookmarked reading group!">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Daniel Toledo">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
