--- a/final/index.html
+++ b/final/index.html
@@ -5,19 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bookmarked - A Local Reading Group</title>
     <meta name="description" content="Welcome to Bookmarked, a local reading group for book lovers. Join us to discover new books, discuss your favorite reads, and connect with fellow readers.">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Daniel Toledo">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://your-website-url.com/">
+    <meta property="og:url" content="https://dhkdc.github.io/wdd231/final/">
     <meta property="og:title" content="Bookmarked - A Local Reading Group">
     <meta property="og:description" content="Welcome to Bookmarked, a local reading group for book lovers. Join us to discover new books, discuss your favorite reads, and connect with fellow readers.">
-    <meta property="og:image" content="https://your-website-url.com/images/bookmarked-logo.webp">
+    <meta property="og:image" content="https://dhkdc.github.io/wdd231/final/images/heroimage.webp">
 
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://your-website-url.com/">
+    <meta property="twitter:url" content="https://dhkdc.github.io/wdd231/final/">
     <meta property="twitter:title" content="Bookmarked - A Local Reading Group">
     <meta property="twitter:description" content="Welcome to Bookmarked, a local reading group for book lovers. Join us to discover new books, discuss your favorite reads, and connect with fellow readers.">
-    <meta property="twitter:image" content="https://your-website-url.com/images/bookmarked-logo.webp">
+    <meta property="twitter:image" content="images/logo-icon.webp">
 
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/styles.css">
@@ -67,8 +67,7 @@
                 <p><strong>Date:</strong> <span id="next-meeting-date">TBA</span></p>
                 <p><strong>Location:</strong> Café Literario "Al Lado Del Museo"</p>
                 <a href="#">Add to Calendar</a>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.469288508924!2d-70.73816585559113!3d-34.17414059461743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9663433f7aaee0cd%3A0xf54323db741b24c4!2sCaf%C3%A9%20Literario%20%22Al%20Lado%20Del%20Museo%22!5e0!3m2!1ses-419!2scl!4v1754768845683!5m2!1ses-419!2scl" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </section>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3925.469288508924!2d-70.73816585559113!3d-34.17414059461743!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9663433f7aaee0cd%3A0xf54323db741b24c4!2sCaf%C3%A9%20Literario%20%22Al%20Lado%20Del%20Museo%22!5e0!3m2!1ses-419!2scl!4v1754768845683!5m2!1ses-419!2scl" height="300" style="border:0; width: 100%;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>            </section>
         </div>
         <section class="bookshelf">
             <h2>From Our Bookshelf</h2>
