--- a/final/blog.html
+++ b/final/blog.html
@@ -86,8 +86,6 @@
                 </div>
         </div>
     </div>
-
-    <script src="scripts/main.js" defer></script>
-    <script src="scripts/blog.js" defer></script>
+    <script type="module" src="scripts/blog.js" defer></script>
 </body>
 </html>
