--- a/final/form-action.html
+++ b/final/form-action.html
@@ -67,8 +67,6 @@
             <a href="#">Contact</a>
         </div>
     </footer>
-
-    <script src="scripts/main.js" defer></script>
-    <script src="scripts/form-action.js" defer></script>
+    <script type="module" src="scripts/form-action.js" defer></script>
 </body>
 </html>
