--- a/final/index.html
+++ b/final/index.html
@@ -98,9 +98,7 @@
             <a href="#">Contact</a>
         </div>
     </footer>
-
-        <script src="scripts/main.js" defer></script>
-    <script src="scripts/home.js" defer></script>
+    <script type="module" src="scripts/home.js" defer></script>
 
     <div id="book-modal" class="modal">
         <div class="modal-content">
