--- a/final/join.html
+++ b/final/join.html
@@ -105,6 +105,6 @@
         </div>
     </footer>
 
-    <script src="scripts/main.js" defer></script>
+    <script type="module" src="scripts/join.js" defer></script>
 </body>
 </html>
